--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,198 @@
 .App {
   text-align: center;
+  
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body{
+    height: 100vh;
+   background-color:rgb(229, 229, 233);
+}
+ #root {
+  
+   height: 100%;
+ }
+.container {
+
+  display: grid;
+  height: 100%;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  grid-template-columns: 2fr 3fr 1fr 3fr 1fr 3fr ;
+  grid-template-rows: 2fr  6fr ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.imgCircular{
+    
+    background: lightblue;
+    border-radius: 50%;
+    width: 70%;
+    height: 70%;
+    margin-left: 15%;
+    margin-top: 10%;
+
+}
+input[type=checkbox] {
+   outline: 1px solid rgb(90, 115, 122);
+   outline-offset: -1px;
+   width: 25px;
+   height: 25px;
+   padding: 3%;
+   cursor:pointer;
+  
+} 
+.btn {
+  
+  background-color:  rgb(219, 229, 235); /* Blue background */
+  border: none; /* Remove borders */ /* White text */
+  cursor: pointer; 
+}
+.scrollCameraContainer{
+  grid-column :2/4;
+  grid-row:2/3;
+  border-left: 3px solid gray;
+}
+.camInput{
+  width: 25px;
+  height: 25px;
+  float: right;
+  margin-top: 3%;
+
+}
+.parametersModalInputs {
+ 
+    margin-left:3% ;
+    padding: 10px;
+}
+.startButtonContainer{
+  display: grid;
+  height: 7vh;
+  width:5vw;
+  margin-top:130%;
+  padding: 30%;
+  
+  grid-column: 1/2;
+  grid-row: 2/3; 
+
+}
+label{
+ 
+ margin-left: 5%;
+ 
+}
+.startButton{
+  
+  border-radius:25%;
+  cursor:pointer;
+  border: 2px solid rgb(92, 88, 88);
+  background-color: aliceblue;
+
+}
+.parametersModal {
+  display: grid;
+  margin-left: 25%;
+  margin-top: 12%;
+  height: 40vh;
+  width:20vw;
+  position: absolute;
+  border: 4px solid rgb(90, 115, 122);
+  background-color:rgb(219, 229, 235);
+  border-radius: 5%;
+
+}
+.btnSelect {
+   height: 80%;
+   background-color:rgb(219, 229, 235); /* Blue background */
+  border: none; /* Remove borders */ /* White text */
+  cursor: pointer; 
+}
+.selectButton {
+  border-radius: "20%";
+  margin-left: 30%;
+  margin-top: 23%;
+  height: 5%;
+  width:5%;
+  position: absolute;
+  border: 5px solid rgb(90, 115, 122) ;
+  background-color: rgb(219, 229, 235);
+}
+ .iconSettings{
+  padding:3%;
+ font-size:25px;
+ color:gray;
+
+}
+.descriptionModal {
+  margin-left: 25%;
+  height: 15%;
+  width:15%;
+  position: absolute;
+  border: 4px solid rgb(90, 115, 122);
+  background-color:rgb(219, 229, 235);
+  border-radius: 5%;
+}
+ul {
+  list-style-type: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.iconMore{
+  padding : 3%;
+  font-size:25px;
+  color:gray;
+  cursor: pointer;
+
+ 
+ }
+ .Submit{
+  
+  background: rgb(20, 113, 136);
   color: white;
+  top: 10px;
+  right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+ 
+
+.X {
+    position: absolute;
+    background: rgb(20, 113, 136);
+    color: white;
+    top: 10px;
+    right: 10px;
+}
+ .posCamera{
+     margin: 15%;
+     margin-top: 0%;
+ }
+ .posAlgo{
+     margin-left:5%;
+     margin-right : 50%;
+    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ 
+
+.selectionBox{
+ height: 70px;
+ margin: 1px 2px 1px 0px;
+ background-color:rgb(219, 229, 235);
+ 
+
 }
+.item{
+  border: 5px solid rgb(90, 115, 122);
+}
+
+
+.scroller {
+ 
+  display: grid;
+  background-color:rgb(90, 115, 122);
+  grid-row:2 / 4;
+  height: 50vh;
+  border-radius: 2%;
+  overflow-y: scroll;
+}
+
+
+
